# jwc

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  rust-ci.yml
benches/: access.rs  comparison.rs  parse_large.rs  parse_nested.rs  parse_small.rs
benches/common/: mod.rs
docs/: ast.md  manipulation.md  parsing.md  python.md
docs/superpowers/plans/: 2026-04-21-share-parser-core.md
examples/: complex_json.rs  profile.rs  profile_instrumented.rs  profile_minimal.rs  profile_parsers.rs  profile_target.rs  usage_demo.rs
jwc_derive/: Cargo.toml
jwc_derive/src/: lib.rs
jwc_py/: Cargo.toml  README.md  pyproject.toml
jwc_py/src/: lib.rs
jwc_py/tests/: test_jwc.py
src/: ast.rs  error.rs  lazy.rs  lazy_val.rs  lib.rs  macros.rs  number.rs  number_arbitrary.rs  number_fast.rs  parser.rs  parser_core.rs  patch.rs  pointer.rs  serializer.rs  simd.rs  single_pass_parser.rs  traits.rs
tests/: comment_round_trip_test.rs  coverage_ast_traits_lib_test.rs  coverage_final_test.rs  coverage_patch_pointer_test.rs  coverage_serializer_parser_test.rs  coverage_to_full_test.rs  derive_attrs_test.rs  derive_test.rs  elements_test.rs  error_positions_test.rs  formatting_test.rs  integration.rs  lazy_comments_test.rs  lazy_feature_test.rs  macro_test.rs  numbers_test.rs  pointer_patch_deep_test.rs  pointer_patch_test.rs  serde_api.rs  serializer_matrix_test.rs  stress_test.rs  traits_test.rs  trivia_refactor_test.rs  usability_test.rs  utf8_test.rs
